[b] Fix collapse selector error

--- a/src/components/common/AboutPageSection/AboutPageSection.scss
+++ b/src/components/common/AboutPageSection/AboutPageSection.scss
@@ -66,7 +66,7 @@
     }
 
     h1 {
-      font-size: 1.75rem;
+      font-size: 1.7rem;
       line-height: 1.75rem;
       word-wrap: break-word;
       transform: translateY(-50%);
